--- a/ReservasHoteleriaWeb/wwwroot/index.html
+++ b/ReservasHoteleriaWeb/wwwroot/index.html
@@ -26,7 +26,78 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <!-- Firebase Authentication -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
+    <!-- Configuración de Firebase -->
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyC73OdicoXqgVzdCHuUnlyqa4Kbuw-qRSs",
+            authDomain: "reservashoteleria-23a91.firebaseapp.com",
+            projectId: "reservashoteleria-23a91",
+            storageBucket: "reservashoteleria-23a91.firebasestorage.app",
+            messagingSenderId: "468313242041",
+            appId: "1:468313242041:web:c1d92172ef336748ed5e68"
+        };
+        firebase.initializeApp(firebaseConfig);
+        console.log(firebase);
+        window.firebaseAuth = {
+            signInWithEmailPassword: async function (email, password) {
+                try {
+                    const userCredential = await firebase.auth().signInWithEmailAndPassword(email, password);
+                    return userCredential.user.uid;
+                } catch (error) {
+                    console.error("Error en autenticación:", error.message);
+                    return null;
+                }
+            },
+
+            createUserWithEmailAndPassword: async function (email, password, displayName) {
+                try {
+                    const userCredential = await firebase.auth().createUserWithEmailAndPassword(email, password)
+                    // El usuario se ha creado correctamente
+                    const user = userCredential.user;
+
+                    // Actualizar el perfil del usuario
+                    user.updateProfile({
+                        displayName: displayName
+                    });
+                    return userCredential.user.uid;
+                    // Enviar correo de verificación
+                    //user.sendEmailVerification()
+                    //    .then(() => {
+                    //        console.log('Correo de verificación enviado.');
+                    //    })
+                    //    .catch((error) => {
+                    //        console.error('Error al enviar el correo de verificación:', error);
+                    //    });
+                } catch (error) {
+                    console.error("Error en autenticación:", error.message);
+                    return null;
+                }
+            },
+
+            signOut: async function () {
+                await firebase.auth().signOut();
+
+            }
+        }; window.localStorageHelper = {
+            setItem: function (key, value) {
+                localStorage.setItem(key, value);
+            },
+            getItem: function (key) {
+                return localStorage.getItem(key);
+            },
+            removeItem: function (key) {
+                localStorage.removeItem(key);
+            }
+        };
+    </script>
+
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetAlert2.min.js"></script>
 </body>
 
 </html>
